# restaurant_management_agents

./: .gitignore  README.md  demo.py  pyproject.toml
database/: schema.sql  seed.sql
docs/: MEMORY_SYSTEM.md  MEMORY_TEST_SCENARIO.md
src/restaurant_flow/: agents.py  conversation.py  main.py  mcp_init.py  models.py  prompts.py
src/restaurant_flow/crews/restaurant_crew/: restaurant_crew.py
src/restaurant_flow/crews/restaurant_crew/config/: agents.yaml  tasks.yaml
src/restaurant_flow/tools/: __init__.py  custom_tool.py  preference_tools.py
