[project]
name = "restaurant_flow"
version = "0.1.0"
description = "restaurant_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=1.5.0",
    "crewai[tools]==1.5.0",
    "mcp>=1.22.0",
    "mcp-server-sqlite>=2025.4.25",
]

[project.scripts]
kickoff = "restaurant_flow.main:kickoff"
run_crew = "restaurant_flow.main:kickoff"
plot = "restaurant_flow.main:plot"
run_with_trigger = "restaurant_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
